Prevent user name overflows

--- a/public/stylesheets/tailwind-styled.css
+++ b/public/stylesheets/tailwind-styled.css
@@ -714,6 +714,14 @@ video {
   width: 24rem;
 }
 
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
 .resize-none {
   resize: none;
 }
@@ -793,6 +801,10 @@ video {
 
 .justify-self-center {
   justify-self: center;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
 }
 
 .overflow-y-auto {
